# Design-Friendly-Control

./: .gitignore  README.md  environment.txt  pyproject.toml  zenodo.json
design_friendly/: easy.ipynb  grads.ipynb  pred_from_case.ipynb  predict.ipynb
design_friendly/gnn/: basics.py  decoder.py  encoder.py  processor.py  windfarmgnn.py
design_friendly/models/: __init__.py  config.yml  losses.yaml  sample.pt  trained_config.yml
design_friendly/models/RA_IEA22_DTU/: RA_ADC.keras  RA_BRM.keras  RA_TBM.keras  RA_TB_torsion.keras  RA_TTM.keras  RA_blade_torsion.keras  RA_ebrm.keras  RA_fbrm.keras  RA_gsb_l10.keras  RA_gsb_lmod.keras  RA_rsb_l10.keras  RA_rsb_lmod.keras  RA_shaft_mx_mb_fixed.keras  RA_shaft_mx_mb_rotating.keras  RA_shaft_my_mb_fixed.keras  RA_shaft_my_mb_rotating.keras  RA_shaft_mz_mb_fixed.keras  RA_shaft_mz_mb_rotating.keras  RA_shaft_torsion.keras  RA_tbfa.keras  RA_tbss.keras  RA_ttfa.keras  RA_ttss.keras  readme
design_friendly/old/: pred_from_case.ipynb
design_friendly/utils/: anim_utils.py  easy.py  get_flowmodel.py  grads.py  graph.py  hs2_steady_state.pwr  iea22.py  iea22s.py  misc.py  plot_utils.py  pred.py  sites.py  sites_api.py  sites_data.py  to_graph.py  vjp.py
docs/: gnn_setpoints.ipynb
