[project]
name = "design_friendly"
version = "0.1.0"
description = "GNN for wind farm control"
authors = [
    { name = "Deniz", email = "dgodi@dtu.dk" }
]
requires-python = ">=3.10"
dependencies = [
    "torch",                # PyTorch
    "torch-geometric",      # PyTorch Geometric
    "tqdm-joblib"           # tqdm integration with joblib
]

[build-system]
requires = ["setuptools>=60",
            "setuptools-scm>=8.0",
            "wheel"]
build-backend = "setuptools.build_meta"

readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]


[tool.setuptools.package-data]
design_friendly = ['models/*.yaml',
           'models/*.pt',
           ]
